# conan_embedded_playground

./: .gitignore  LICENSE  README.md
example_app/: CMakeLists.txt  clang_support.cmake  conanfile.py.backup  conanfile.txt  macros.cmake
example_app/.cache/clangd/index/: adc.hpp.CB0D9A0C6F7A7B11.idx  adc_stm32.cpp.0C5B77ECCBB98B7A.idx  cmsis_compiler.h.741C033A84FA5686.idx  cmsis_compiler.h.F52744D928D54990.idx  cmsis_gcc.h.95844FEE24E43C3C.idx  cmsis_gcc.h.F1FDEBA74EECD960.idx  cmsis_version.h.577DDCDD7E12DE65.idx  cmsis_version.h.801C001D85638333.idx  core_cm0.h.8B9A761BF6939CD3.idx  gpio.cpp.9F1E8BF6439829BB.idx  gpio.hpp.7BAD0C8B128C875A.idx  hal.hpp.6EEBED51BB747A82.idx  hal.hpp.D705ECBD3C452306.idx  main.cpp.D9D329940EBC90CB.idx  main.cpp.DADEEDC6E9425266.idx  main.cpp.FBE59070EC9D76B6.idx  main_exceptions.cpp.9E352ECDA4367E3F.idx  nosys_stubs.c.EA884059736ECA41.idx  retarget.cpp.D2BD067D189EEAF5.idx  retarget.hpp.7B79F20D9E6C4294.idx  retarget.hpp.85F2B2A1E6018219.idx  startup_stm32f072xb.s.3ACD1392D7DFE587.idx  startup_stm32f072xb.s.F3FD7A487DFC1578.idx  stm32_hal_legacy.h.FAB9675E07983BBB.idx  stm32f072xb.h.53B7F73744153F66.idx  stm32f072xb.h.85E0E17262A699DB.idx  stm32f0xx.h.39EDF61F95407E7A.idx  stm32f0xx.h.B924C8D0135F1587.idx  stm32f0xx_hal.c.707A350F36A60988.idx  stm32f0xx_hal.c.A8E08166C698589E.idx  stm32f0xx_hal.c.FFA809054AC049F3.idx  stm32f0xx_hal.h.AC97297E30D4B50F.idx  stm32f0xx_hal_adc.c.66B94E47F3C861A7.idx  stm32f0xx_hal_adc.h.10E7997EDB58DF02.idx  stm32f0xx_hal_adc_ex.c.2DF98250737F72FE.idx  stm32f0xx_hal_adc_ex.h.0C0D6070566FF143.idx  stm32f0xx_hal_adc_ex.h.6CC63D0075B9F5FE.idx  stm32f0xx_hal_conf.h.87E4344195B56045.idx  stm32f0xx_hal_conf.h.9062E5F4ECAAAD8C.idx  stm32f0xx_hal_cortex.c.361BA6A16BD957CC.idx  (+50 more)
example_app/app/src/: main.cpp
example_app/renode_scripts/: stm32f072.resc
renode/: conanfile.py  conanfile.py.backup  renode_macros.cmake
renode/test_package/: CMakeUserPresets.json  conanfile.py
stm32f072_platform/: .clang-tidy  CMakeLists.txt  conanfile.py
stm32f072_platform/.cache/clangd/index/: adc_stm32.hpp.E3E5CEE278CC4E39.idx  cmsis_compiler.h.7E9591A985D37435.idx  cmsis_gcc.h.D172A571B823C120.idx  cmsis_version.h.93CF7C697516A991.idx  core_cm0.h.2662E2F530969C61.idx  core_cm0.h.DEB3D484B528BF78.idx  gpio_interrupt_manager.cpp.B77E4FE98855C5B2.idx  gpio_interrupt_manager.hpp.3345CEE455382B94.idx  gpio_stm32.hpp.30B18D6134EF5D5D.idx  hal.hpp.BC7DDAAEB8526E89.idx  mac_address.hpp.59AA0FBAD656D9C2.idx  retarget.cpp.73468707BC2B9671.idx  startup_stm32f072xb.s.3E36290951C6BF26.idx  startup_stm32f072xb.s.565A760D52FA3145.idx  stm32_hal_legacy.h.8A09E5EB64DBE9F9.idx  stm32_hal_legacy.h.CC2D4CF9C1BB9E02.idx  stm32f072xb.h.1F9146687727DF28.idx  stm32f0xx.h.CA36D5BD2E1E5828.idx  stm32f0xx_hal.c.2F6CE6A77AFB954D.idx  stm32f0xx_hal.h.2D84BD5F6309E163.idx  stm32f0xx_hal.h.E4531C837EDB9DF9.idx  stm32f0xx_hal_adc.h.4627CED7A2633341.idx  stm32f0xx_hal_adc.h.C87C9C1AF602F1F5.idx  stm32f0xx_hal_adc_ex.h.116B59E32F770C09.idx  stm32f0xx_hal_conf.h.B372EB4C71433719.idx  stm32f0xx_hal_cortex.c.812D39F2E013D43C.idx  stm32f0xx_hal_cortex.c.C642C9874B48969F.idx  stm32f0xx_hal_cortex.h.83B8B72BF3EC91DC.idx  stm32f0xx_hal_crc.h.67D8518D59667D71.idx  stm32f0xx_hal_crc_ex.h.069D7DFC76BFDFD2.idx  stm32f0xx_hal_crc_ex.h.7370916EA7BA31C3.idx  stm32f0xx_hal_crc_ex.h.8E454B0EB1B37646.idx  stm32f0xx_hal_dac.h.7923B3F1DE46C5FA.idx  stm32f0xx_hal_dac_ex.h.02AF536547C88A59.idx  stm32f0xx_hal_dac_ex.h.34C634D9F0D508A3.idx  stm32f0xx_hal_def.h.5073D0E4E77E2CF0.idx  stm32f0xx_hal_def.h.6128A881EDEF7056.idx  stm32f0xx_hal_def.h.B5272E5A3CA4B33C.idx  stm32f0xx_hal_dma.h.3320F65061D6265A.idx  stm32f0xx_hal_dma.h.48570DD30611288B.idx  (+62 more)
stm32f072_platform/cstdlib_support/: CMakeLists.txt  retarget.cpp  retarget.hpp
stm32f072_platform/hal/: CMakeLists.txt
stm32f072_platform/hal/adc/src/: adc_stm32.cpp
stm32f072_platform/platform/: CMakeLists.txt
stm32f072_platform/util/: CMakeLists.txt
stm32f072_platform/util/inc/: mac_address.hpp
toolchain/: conanfile.py
toolchain/test_package/: CMakeLists.txt  CMakeUserPresets.json  conanfile.py  test_package.cpp
